--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <div class="bottom-bar">
                 <p>Sapphire - Luxury Restaraunt</p>
-                <p>© Copyright 2024. All Rights Reserved. Design <a href="https://github.com/velimirpaleksic" target="_blank">Velimir Paleksić</a></p>
+                <p>© Copyright 2025. All Rights Reserved. Design <a href="https://github.com/velimirpaleksic" target="_blank">Velimir Paleksić</a>.</p>
             </div>
         </footer>
         <!-- END FOOTER -->
