--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav>
             <div class="container">
                 <a href="#hero">
-                    <img src="assets/img/logo/logo-white.png">
+                    <img src="assets/img/logo/logo-white.webp">
                 </a>
             </div>
             <div class="container" id="links">
@@ -72,7 +72,7 @@
         <!-- START HERO -->
         <section class="hero" id="hero">
             <div class="image">
-                <img src="assets/img/sections/hero.jpg" alt="Hero background image" class="hero-image">
+                <img src="assets/img/sections/hero.webp" alt="Hero background image" class="hero-image">
             </div>
             <div class="hero-text">
                 <h1>Sapphire</h1>
