--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- JAVASCRIPT -->
         <script defer src="assets/js/main.js"></script>
     </head>
-    <body>
+    <body onload="heroChange()">
         <!-- START NAVBAR -->
         <nav>
             <div class="container">
@@ -71,8 +71,11 @@
 
         <!-- START HERO -->
         <section class="hero" id="hero">
-            <div class="image">
-                <img src="assets/img/sections/hero.webp" alt="Hero background image" class="hero-image">
+            <div class="images">
+                <img src="assets/img/sections/hero/hero_1.webp" alt="Hero background image" class="hero-image" style="opacity: 1;">
+                <img src="assets/img/sections/hero/hero_2.webp" alt="Hero background image" class="hero-image">
+                <img src="assets/img/sections/hero/hero_3.webp" alt="Hero background image" class="hero-image">
+                <img src="assets/img/sections/hero/hero_4.webp" alt="Hero background image" class="hero-image">
             </div>
             <div class="hero-text">
                 <h1>Sapphire</h1>
