--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="hero-text">
                 <h1>Sapphire</h1>
                 <h3><i>Luxury Restaraunt</i></h3>
-                <p><a href="#chef" class="scroll-link">Explore more</a></p>
+                <p><a href="#chef">Explore more</a></p>
             </div>
         </section>
         <!-- END HERO -->
